# chinese_chess_engine

./: Cargo.toml  README.md
c_test/: game_command.txt  test.cc  test_from_file.cc
include/: chinese_chess_engine.h
src/: lib.rs  main.rs
src/core/: bitboard.rs  board.rs  board_cache.rs  mod.rs  piece.rs  position.rs  ruler.rs  zobrist.rs
src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
