[package]
name = "chinese_chess_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
libc = "0.2"

[lib]
name = "chinese_chess_engine"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "chinese_chess_engine"
path = "src/main.rs"